--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,264 @@
+@inproceedings{DBLP:conf/chi/LernerFG15,
+  author    = {Sorin Lerner and
+               Stephen R. Foster and
+               William G. Griswold},
+  title     = {Polymorphic Blocks: Formalism-Inspired {UI} for Structured Connectors},
+  booktitle = {Proceedings of the 33rd Annual {ACM} Conference on Human Factors in
+               Computing Systems, {CHI} 2015, Seoul, Republic of Korea, April 18-23,
+               2015},
+  pages     = {3063--3072},
+  year      = {2015},
+  crossref  = {DBLP:conf/chi/2015},
+  url       = {http://doi.acm.org/10.1145/2702123.2702302},
+  doi       = {10.1145/2702123.2702302},
+  timestamp = {Sun, 19 Apr 2015 16:24:23 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/chi/LernerFG15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{burckhardt2013s,
+  title={It's alive! continuous feedback in UI programming},
+  author={Burckhardt, Sebastian and Fahndrich, Manuel and de Halleux, Peli and McDirmid, Sean and Moskal, Michal and Tillmann, Nikolai and Kato, Jun},
+  booktitle={ACM SIGPLAN Notices},
+  volume={48},
+  number={6},
+  pages={95--104},
+  year={2013},
+  organization={ACM}
+}
+
+@article{DBLP:journals/entcs/Sands97,
+  author    = {Dave Sands},
+  title     = {Computing with Contexts: {A} simple approach},
+  journal   = {Electr. Notes Theor. Comput. Sci.},
+  volume    = {10},
+  pages     = {134--149},
+  year      = {1997},
+  url       = {http://dx.doi.org/10.1016/S1571-0661(05)80694-2},
+  doi       = {10.1016/S1571-0661(05)80694-2},
+  timestamp = {Mon, 20 Jun 2011 17:31:54 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/entcs/Sands97},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icfp/LeeF96,
+  author    = {Shinn{-}Der Lee and
+               Daniel P. Friedman},
+  title     = {Enriching the Lambda Calculus with Contexts: Toward a Theory of Incremental
+               Program Construction},
+  booktitle = {Proceedings of the 1996 {ACM} {SIGPLAN} International Conference on
+               Functional Programming {(ICFP} '96), Philadelphia, Pennsylvania, May
+               24-26, 1996.},
+  pages     = {239--250},
+  year      = {1996},
+  crossref  = {DBLP:conf/icfp/1996},
+  url       = {http://doi.acm.org/10.1145/232627.232652},
+  doi       = {10.1145/232627.232652},
+  timestamp = {Tue, 11 Jun 2013 13:54:16 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icfp/LeeF96},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@article{mcbride2000dependently,
+  title={Dependently typed functional programs and their proofs},
+  author={McBride, Conor},
+  year={2000},
+  publisher={University of Edinburgh. College of Science and Engineering. School of Informatics.}
+}
+
+@inproceedings{DBLP:conf/flops/Pientka10,
+  author    = {Brigitte Pientka},
+  title     = {Beluga: Programming with Dependent Types, Contextual Data, and Contexts},
+  booktitle = {Functional and Logic Programming, 10th International Symposium, {FLOPS}
+               2010, Sendai, Japan, April 19-21, 2010. Proceedings},
+  pages     = {1--12},
+  year      = {2010},
+  crossref  = {DBLP:conf/flops/2010},
+  url       = {http://dx.doi.org/10.1007/978-3-642-12251-4_1},
+  doi       = {10.1007/978-3-642-12251-4_1},
+  timestamp = {Fri, 19 Jul 2013 09:37:20 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/flops/Pientka10},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/tocl/NanevskiPP08,
+  author    = {Aleksandar Nanevski and
+               Frank Pfenning and
+               Brigitte Pientka},
+  title     = {Contextual modal type theory},
+  journal   = {{ACM} Trans. Comput. Log.},
+  volume    = {9},
+  number    = {3},
+  year      = {2008},
+  url       = {http://doi.acm.org/10.1145/1352582.1352591},
+  doi       = {10.1145/1352582.1352591},
+  timestamp = {Tue, 10 Jun 2008 13:15:19 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/tocl/NanevskiPP08},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@inproceedings{DBLP:conf/pldi/OseraZ15,
+  author    = {Peter{-}Michael Osera and
+               Steve Zdancewic},
+  title     = {Type-and-example-directed program synthesis},
+  booktitle = {Proceedings of the 36th {ACM} {SIGPLAN} Conference on Programming
+               Language Design and Implementation, Portland, OR, USA, June 15-17,
+               2015},
+  pages     = {619--630},
+  year      = {2015},
+  crossref  = {DBLP:conf/pldi/2015},
+  url       = {http://doi.acm.org/10.1145/2737924.2738007},
+  doi       = {10.1145/2737924.2738007},
+  timestamp = {Fri, 05 Jun 2015 07:31:54 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/pldi/OseraZ15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@article{brady2013idris,
+  title={Idris, a general-purpose dependently typed programming language: Design and implementation},
+  author={Brady, Edwin},
+  journal={Journal of Functional Programming},
+  volume={23},
+  number={05},
+  pages={552--593},
+  year={2013},
+  publisher={Cambridge Univ Press}
+}
+
+@inproceedings{DBLP:conf/popl/CiminiS16,
+  author    = {Matteo Cimini and
+               Jeremy G. Siek},
+  title     = {The gradualizer: a methodology and algorithm for generating gradual
+               type systems},
+  booktitle = {Proceedings of the 43rd Annual {ACM} {SIGPLAN-SIGACT} Symposium on
+               Principles of Programming Languages, {POPL} 2016, St. Petersburg,
+               FL, USA, January 20 - 22, 2016},
+  pages     = {443--455},
+  year      = {2016},
+  crossref  = {DBLP:conf/popl/2016},
+  url       = {http://doi.acm.org/10.1145/2837614.2837632},
+  doi       = {10.1145/2837614.2837632},
+  timestamp = {Wed, 09 Mar 2016 08:11:59 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/popl/CiminiS16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{damas1982principal,
+  title={Principal type-schemes for functional programs},
+  author={Damas, Luis and Milner, Robin},
+  booktitle={Proceedings of the 9th ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+  pages={207--212},
+  year={1982},
+  organization={ACM}
+}
+
+@inproceedings{DBLP:conf/popl/GarciaC15,
+  author    = {Ronald Garcia and
+               Matteo Cimini},
+  title     = {Principal Type Schemes for Gradual Programs},
+  booktitle = {Proceedings of the 42nd Annual {ACM} {SIGPLAN-SIGACT} Symposium on
+               Principles of Programming Languages, {POPL} 2015, Mumbai, India, January
+               15-17, 2015},
+  pages     = {303--315},
+  year      = {2015},
+  crossref  = {DBLP:conf/popl/2015},
+  url       = {http://doi.acm.org/10.1145/2676726.2676992},
+  doi       = {10.1145/2676726.2676992},
+  timestamp = {Sat, 20 Dec 2014 16:58:56 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/popl/GarciaC15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/popl/RastogiCH12,
+  author    = {Aseem Rastogi and
+               Avik Chaudhuri and
+               Basil Hosmer},
+  title     = {The ins and outs of gradual type inference},
+  booktitle = {Proceedings of the 39th {ACM} {SIGPLAN-SIGACT} Symposium on Principles
+               of Programming Languages, {POPL} 2012, Philadelphia, Pennsylvania,
+               USA, January 22-28, 2012},
+  pages     = {481--494},
+  year      = {2012},
+  crossref  = {DBLP:conf/popl/2012},
+  url       = {http://doi.acm.org/10.1145/2103656.2103714},
+  doi       = {10.1145/2103656.2103714},
+  timestamp = {Tue, 22 May 2012 15:24:56 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/popl/RastogiCH12},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{voelter2011language,
+  title={Language and IDE Modularization and Composition with MPS},
+  author={Voelter, Markus},
+  booktitle={International Summer School on Generative and Transformational Techniques in Software Engineering},
+  pages={383--430},
+  year={2011},
+  organization={Springer}
+}
+
+@inproceedings{DBLP:conf/sle/VolterSBK14,
+  author    = {Markus V{\"{o}}lter and
+               Janet Siegmund and
+               Thorsten Berger and
+               Bernd Kolb},
+  title     = {Towards User-Friendly Projectional Editors},
+  booktitle = {Software Language Engineering - 7th International Conference, {SLE}
+               2014, V{\"{a}}ster{\aa}s, Sweden, September 15-16, 2014. Proceedings},
+  pages     = {41--61},
+  year      = {2014},
+  crossref  = {DBLP:conf/sle/2014},
+  url       = {http://dx.doi.org/10.1007/978-3-319-11245-9_3},
+  doi       = {10.1007/978-3-319-11245-9_3},
+  timestamp = {Tue, 09 Sep 2014 10:57:11 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/sle/VolterSBK14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/software/VoelterWK15,
+  author    = {Markus Voelter and
+               Jos Warmer and
+               Bernd Kolb},
+  title     = {Projecting a Modular Future},
+  journal   = {{IEEE} Software},
+  volume    = {32},
+  number    = {5},
+  pages     = {46--52},
+  year      = {2015},
+  url       = {http://dx.doi.org/10.1109/MS.2014.103},
+  doi       = {10.1109/MS.2014.103},
+  timestamp = {Tue, 12 Jan 2016 12:01:57 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/software/VoelterWK15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icfp/Elliott07,
+  author    = {Conal Elliott},
+  title     = {Tangible functional programming},
+  booktitle = {Proceedings of the 12th {ACM} {SIGPLAN} International Conference on
+               Functional Programming, {ICFP} 2007, Freiburg, Germany, October 1-3,
+               2007},
+  pages     = {59--70},
+  year      = {2007},
+  crossref  = {DBLP:conf/icfp/2007},
+  url       = {http://doi.acm.org/10.1145/1291151.1291163},
+  doi       = {10.1145/1291151.1291163},
+  timestamp = {Tue, 06 Nov 2007 12:48:33 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icfp/Elliott07},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/ml/Balat06,
+  author    = {Vincent Balat},
+  title     = {Ocsigen: typing web interaction with objective Caml},
+  booktitle = {Proceedings of the {ACM} Workshop on ML, 2006, Portland, Oregon, USA,
+               September 16, 2006},
+  pages     = {84--94},
+  year      = {2006},
+  crossref  = {DBLP:conf/ml/2006},
+  url       = {http://doi.acm.org/10.1145/1159876.1159889},
+  doi       = {10.1145/1159876.1159889},
+  timestamp = {Tue, 06 Nov 2007 12:58:44 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ml/Balat06},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @book{pfpl,
 	Author = {Harper, Robert},
 	Title = {{Practical Foundations for Programming Languages}},
