--- a/implementation.tex
+++ b/implementation.tex
@@ -18,7 +18,7 @@ If an action is not well-defined according to Hazelnut's action semantics, the i
 \subsection{HZ}
 We have developed a simple reference implementation of Hazelnut.
 In order to reach a wide audience, we decided to implement HZ in the web browser.
-In order to take advantage of a mature implementation of the FRP model, we chose to implement HZ using OCaml\footnote{https://ocaml.org/}, the \texttt{js\_of\_ocaml} compiler and associated libraries\footnote{http://ocsigen.org/js\_of\_ocaml/} and the OCaml React library\footnote{http://erratique.ch/software/react}.
+In order to take advantage of a mature implementation of the FRP model, we chose to implement HZ using OCaml\footnote{https://ocaml.org/}, the \texttt{js\_of\_ocaml} compiler and associated libraries \cite{DBLP:conf/ml/Balat06}\footnote{http://ocsigen.org/js\_of\_ocaml/} and the OCaml React library\footnote{http://erratique.ch/software/react}.
 
 At the time of the writing, 
-HZ's view computation renders the model as a string embedded into HTML. The action palette is a collection of buttons and text boxes, which are disabled when an action is not well-defined or an invalid action argument is entered. We determine this by simply attempting to run the action internally and catching the exception that is raised when an action is undefined. This, of course, is not meant to score marks for usability or performance. Instead, as a simple reference implementation, we expect its source code to be of use to others who are interested in layering a more fluid user interface atop the core semantics (which have been implemented in a style that follows the presentation in this paper closely), or extensions thereof.
+HZ's view computation renders the model as a string embedded into HTML that approximates our typeset notation in this paper. The action palette is a collection of buttons and text boxes, which are disabled when an action is not well-defined or an invalid action argument is entered. We determine this by simply attempting to perform the action internally and catching the exception that is raised when an action is undefined. This design, of course, is not meant to score marks for usability or performance. Instead, as a simple reference implementation, we expect its source code to be of use to others who are interested in layering a more fluid user interface atop the core semantics (which have been implemented in a style that follows the presentation in this paper closely), or extensions thereof.
