--- a/intro.tex
+++ b/intro.tex
@@ -99,8 +99,8 @@ The remainder of this paper is organized as follows:
 \begin{itemize}[itemsep=0px,partopsep=2px,topsep=2px]
 \item We begin in Sec. 
     \ref{sec:example} with two examples of edit sequences to develop the reader's intuitions.  
-\item We then give a detailed overview of Hazelnut's semantics and metatheory, which have been mechanized using the Agda proof assistant, in Sec.  \ref{sec:hazel}.
-\item Hazelnut is a {foundational} calculus, i.e. a calculus that language and editor designers are expected to extend with higher level constructs. We extend Hazelnut with simple sum types in Sec.  \ref{sec:extending} to demonstrate how Hazelnut's rich mechanized metatheory guides such a development. 
+\item We then give a detailed overview of Hazelnut's semantics and metatheory, and our mechanization in the Agda proof assistant, in Sec.  \ref{sec:hazel}.
+\item Hazelnut is a {foundational} calculus, i.e. a calculus that language and editor designers are expected to extend with higher level constructs. We extend Hazelnut with simple sum types in Sec.  \ref{sec:extending} to demonstrate how Hazelnut's rich metatheory guides such a development. 
 \item In Sec.  \ref{sec:impl}, we briefly describe how Hazelnut's action semantics lends itself to efficient implementation as a functional reactive program. Our reference implementation is written using \lstinline{js_of_ocaml} and the OCaml \lstinline{React} library.
  
 % \item However, we consider the space of possible evaluation strategies for incomplete expressions in Section \ref{sec:dynamics}. 
